adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium, animi! At aut, maiores optio ex voluptatibus dolorum labore ipsam debitis tempora. Cupiditate quos quaerat incidunt libero architecto magni. Error, voluptatibus.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, tempore placeat aperiam eius deleniti quibusdam facilis ea iusto asperiores quod esse odit earum itaque officiis commodi. Consequuntur quod vitae maiores?</p>
 </body>
 </html>
